[workspace]
resolver = "2"                                         # Important! wgpu/Bevy needs this!
members = ["cmp", "client", "example-mod", "bevy-qoi"]
default-members = ["client"]

[workspace.package]
version = "0.1.0"
description = "CMP, the Camping Madness Project game"
edition = "2021"
rust-version = "1.75"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
