[package]
name = "bevy_qoi"
readme = "README.md"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.75"
bevy = { version = "0.14", default-features = false, features = [
	"bevy_asset",
	"bevy_render",
] }
qoi = "0.4"
