[package]
name = "bevy_qoi"
readme = "README.md"
version = "0.3.0"
description = "QOI image asset support for Bevy"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
bevy = { version = "0.15", default-features = false, features = [
	"bevy_asset",
	"bevy_render",
] }
qoi = "0.4"
