[package]
name = "cmp"
description = "CMP core game engine"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_dynamic_plugin = "0.11.2"
winit = "0.28"
confy = "0.5.1"
argh = "0.1.12"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
libloading = "0.8"
