[package]
name = "cmp"
description = "CMP core game engine"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
# The Bevy game engine.
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
# Bevy dynamic plugin support, used for first-class modding support in CMP.
bevy_dynamic_plugin = "0.11.2"
libloading = "0.8"
# Direct access to Bevy's windowing library winit for some functionality such as setting a window logo.
winit = "0.28"
# Simple loading and saving of game settings in a cross-platform way.
confy = "0.5.1"
# Setting and game state serialization/deserialization from and to disk.
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
# CLI Arguments for the various executables.
argh = "0.1.12"
# Iteration utilities for internal functionality.
itertools = "0.11.0"
bitflags = { version = "2.4.0", features = ["std"] }
parking_lot = { version = "0.12.1", features = ["nightly"] }
dashmap = "5.5.3"
bevy_qoi = { path = "../bevy-qoi" }

[build-dependencies]
embed-resource = "1.6.3"
