[package]
name = "cmp"
description = "CMP core game engine"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[lints.rust]
missing_docs = "deny"
incomplete_features = "allow"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -100 }
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
# The Bevy game engine.
bevy = { version = "0.14", features = ["dynamic_linking"] }
moonshine-save = "0.3.9"
# Direct access to Bevy's windowing library winit for some functionality such as setting a window logo.
winit = "0.30"
# Simple loading and saving of game settings in a cross-platform way.
confy = "0.5.1"
# Setting and game state serialization/deserialization from and to disk.
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
# CLI Arguments for the various executables.
argh = "0.1.12"
# Iteration utilities for internal functionality.
itertools = "0.11.0"
bitflags = { version = "2.4.0", features = ["std"] }
parking_lot = { version = "0.12.1", features = ["nightly"] }
dashmap = "5.5.3"
bevy_qoi = { path = "../bevy-qoi" }
petgraph = "0.6.5"
thiserror = "1.0"
tempfile = "3.11.0"
brotli = { version = "6.0.0", features = ["simd", "disable-timer"] }
anyhow = "1.0.86"
directories = "4.0.1"

[build-dependencies]
embed-resource = "1.6.3"
