[package]
name = "example-mod"
version.workspace = true
description = "Example CMP game plugin (\"mod\") to demonstrate and test CMP's modding functionality"
edition.workspace = true

[lib]
# The plugin must be a native (C) dynamic library.
crate-type = ["dylib"]

[dependencies]
# In your plugin, depend on CMP via git instead. Use rev or tag to depend on the specific version that you're modding.
#cmp = { git = "https://github.com/kleinesfilmroellchen/cmp.git" }
# Replace this with the above instead:
cmp = { path = "../cmp" }
# Make sure to specify the identical bevy version as CMP itself!
# Use "dynamic_linking" to not statically link bevy into your app, but use CMP's built-in shared bevy library instead.
bevy = { version = "0.14" }
